--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Vaelkomin til Vegg-verkaetlanina!
 
+Hetta er utgava 0.1.
+
 Tiverri havi eg ikki nakran installara, so alt ma setast upp manuelt.
 
 Fyri at faa Vegg at rigga ma hann setast upp i einum LAMP umhvorvi.
