--- a/README
+++ b/README
@@ -10,4 +10,4 @@ ti tad einasta eg havi roynt enn er WAMP.
 
 Mysql databasin kann setast upp vid informationini i databasi.sql.
 
-Takk fyri ahugan :)
+Takk fyri ahugan!
